lib/rl_bindings.h

void DrawLine3D_(Vector3 *a, Vector3 *b, Color *c);
void DrawPoint3D_(Vector3 *a, Color *b);
void DrawCircle3D_(Vector3 *a, float b, Vector3 *c, float d, Color *e);
void DrawTriangle3D_(Vector3 *a, Vector3 *b, Vector3 *c, Color *d);
void DrawTriangleStrip3D_(Vector3 *a, int b, Color *c);
void DrawCube_(Vector3 *a, float b, float c, float d, Color *e);
void DrawCubeV_(Vector3 *a, Vector3 *b, Color *c);
void DrawCubeWires_(Vector3 *a, float b, float c, float d, Color *e);
void DrawCubeWiresV_(Vector3 *a, Vector3 *b, Color *c);
void DrawSphere_(Vector3 *a, float b, Color *c);
void DrawSphereEx_(Vector3 *a, float b, int c, int d, Color *e);
void DrawSphereWires_(Vector3 *a, float b, int c, int d, Color *e);
void DrawCylinder_(Vector3 *a, float b, float c, float d, int e, Color *f);
void DrawCylinderEx_(Vector3 *a, Vector3 *b, float c, float d, int e, Color *f);
void DrawCylinderWires_(Vector3 *a, float b, float c, float d, int e, Color *f);
void DrawCylinderWiresEx_(Vector3 *a, Vector3 *b, float c, float d, int e, Color *f);
void DrawCapsule_(Vector3 *a, Vector3 *b, float c, int d, int e, Color *f);
void DrawPlane_(Vector3 *a, Vector2 *b, Color *c);
void DrawRay_(Ray *a, Color *b);
Model *LoadModel_(char *a);
Model *LoadModelFromMesh_(Mesh *a);
bool IsModelReady_(Model* a);
void UnloadModel_(Model *a);
void UnloadModelKeepMeshes_(Model *a);
BoundingBox *GetModelBoundingBox_(Model *a);
void DrawModel_(Model *a, Vector3 *b, float c, Color *d);
void DrawModelEx_(Model *a, Vector3 *b, Vector3 *c, float d, Vector3 *e, Color *f);
void DrawModelWires_(Model *a, Vector3 *b, float c, Color *d);
void DrawModelWiresEx_(Model *a, Vector3 *b, Vector3 *c, float d, Vector3 *e, Color *f);
void DrawBoundingBox_(BoundingBox *a, Color *b);
void DrawBillboard_(Camera3D *a, Texture *b, Vector3 *c, float d, Color *e);
void DrawBillboardRec_(Camera3D *a, Texture *b, Rectangle *c, Vector3 *d, Vector2 *e, Color *f);
void DrawBillboardPro_(Camera3D *a, Texture *b, Rectangle *c, Vector3 *d, Vector3 *e, Vector2 *f, Vector2 *g, float h, Color *i);
void UpdateMeshBuffer_(Mesh *a, int b, const void *c, int d, int e);
void UnloadMesh_(Mesh *a);
void DrawMesh_(Mesh *a, Material *b, Matrix *c);
void DrawMeshInstanced_(Mesh *a, Material *b, Matrix *c, int d);
int ExportMesh_(Mesh *a, char *b);
BoundingBox *GetMeshBoundingBox_(Mesh *a);
Mesh *GenMeshPoly_(int a, float b);
Mesh *GenMeshPlane_(float a, float b, int c, int d);
Mesh *GenMeshCube_(float a, float b, float c);
Mesh *GenMeshSphere_(float a, int b, int c);
Mesh *GenMeshHemiSphere_(float a, int b, int c);
Mesh *GenMeshCylinder_(float a, float b, int c);
Mesh *GenMeshCone_(float a, float b, int c);
Mesh *GenMeshTorus_(float a, float b, int c, int d);
Mesh *GenMeshKnot_(float a, float b, int c, int d);
Mesh *GenMeshHeightmap_(Image *a, Vector3 *b);
Mesh *GenMeshCubicmap_(Image *a, Vector3 *b);
Material *LoadMaterialDefault_();
bool IsMaterialReady_(Material *a);
void UnloadMaterial_(Material *a);
void SetMaterialTexture_(Material *a, int b, Texture *c);
void UpdateModelAnimation_(Model *a, ModelAnimation *b, int c);
void UnloadModelAnimation_(ModelAnimation *a);
int IsModelAnimationValid_(Model *a, ModelAnimation *b);
int CheckCollisionSpheres_(Vector3 *a, float b, Vector3 *c, float d);
int CheckCollisionBoxes_(BoundingBox *a, BoundingBox *b);
int CheckCollisionBoxSphere_(BoundingBox *a, Vector3 *b, float c);
RayCollision *GetRayCollisionSphere_(Ray *a, Vector3 *b, float c);
RayCollision *GetRayCollisionBox_(Ray *a, BoundingBox *b);
RayCollision *GetRayCollisionMesh_(Ray *a, Mesh *b, Matrix *c);
RayCollision *GetRayCollisionTriangle_(Ray *a, Vector3 *b, Vector3 *c, Vector3 *d);
RayCollision *GetRayCollisionQuad_(Ray *a, Vector3 *b, Vector3 *c, Vector3 *d, Vector3 *e);